--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         Yongsan-gu · Seoul, Republic of Korea · (+82) 10-1234-5678 ·
                         <a href="mailto:name@email.com">skjung247@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Hi! Thank you for visiting my webpage.
+                     I am a newbie in programming and just started to learn how to code. My goal is to be an expert in AI industry.
+                     I'll keep updating if there is something new. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
@@ -164,7 +166,14 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="#"><i class="fas fa-utensils"></i></i></a>
+                        <a class="social-icon" href="#"><i class="fas fa-coffee"></i></i></a>
+                        <a class="social-icon" href="#"><i class="fas fa-cookie"></i></i></a>
+                        <a class="social-icon" href="#"><i class="fas fa-ice-cream"></i></i></i></a>
+
+                    </div>
+                    <p><p><p></p> I love to eat and drink. I enjoy most of my time searching and going restaurants and dessert shops. </p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
